@@ -42,7 +42,7 @@ class MarbleWidgetInputHandler;
 class MarbleWidgetPopupMenu;
 class TextureColorizer;
 class MeasureTool;
-class TileCreatorDialog;
+class TileCreator;
 class MarbleWidgetPrivate;
 class GpsLayer;
 class FileViewModel;
@@ -639,6 +639,7 @@ class MARBLE_EXPORT MarbleWidget : public QWidget
 
     /**
      * @brief A slot that is called when the model starts to create new tiles.
+     * @param creator the tile creator object.
      * @param name  the name of the created theme.
      * @param description  a descriptive text that can be shown in a dialog.
      * @see    creatingTilesProgress
@@ -654,18 +655,7 @@ class MARBLE_EXPORT MarbleWidget : public QWidget
      * calls to creatingTilesProgress, and the poup dialog can then be
      * closed.
      */
-    void creatingTilesStart( const QString& name, const QString& description );
-
-    /**
-     * @brief A slot that is called while the model is creating new tiles.
-     * @param  progress  the percentage done
-     * @see    creatingTilesStart
-     *
-     * This function is connected to the models' signal with the same
-     * name. See creatingTilesStart for a description of how it is
-     * used.
-     */
-    void creatingTilesProgress( int progress );
+    void creatingTilesStart( TileCreator *creator, const QString& name, const QString& description );
 
     void updateChangedMap();
 
